fix: about page font not working on Safari

--- a/app/assets/stylesheets/ab.scss
+++ b/app/assets/stylesheets/ab.scss
@@ -29,6 +29,9 @@
 }
 
 .ab-text {
+  font-family: "calluna-sans",sans-serif;
+  font-weight: 600;
+  font-style: italic;
   margin: 0 auto 3em;
   max-width: 30em;
   text-align: left;
